fixed spacing in footer and about me section

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,7 @@
   width: 100%; 
   background-image: url(https://images.unsplash.com/photo-1535242208474-9a2793260ca8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Z3JlZW5lcnl8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=1400&q=60);
   background-size: cover;
-  background position:center;
+  background-position:center;
 }
 nav{
   display: flex;
@@ -95,7 +95,7 @@ h3{
 }
 h4{
   color: var(--blue);
-  letter-spacing: 6px;
+  letter-spacing: 2px;
   font-size: 20px;
 }
 .email form{
@@ -107,7 +107,7 @@ h4{
   display: inline-block;
   width: 100%;
   padding: 14px 130px 14px 15px;
-  border: 2px solid var(--blue);
+  border: 2px solid var(--crimson);
   outline: none;
   border-radius:30px;
   -webkit-border-radius:30px;
@@ -126,7 +126,7 @@ h4{
   -moz-border-radius:30px;
   -ms-border-radius:30px;
   -o-border-radius:30px;
-  background-color: var(--blue);
+  background-color: var(--hot-pink);
   color: var(--grey);
   box-shadow: 0px 0px 5px var(--dark), 0px 0px 15px #858585;
   top: 6px;
@@ -134,15 +134,18 @@ h4{
 }
 .about{
   width: 100%;
-  padding:10px 0px;
+  padding:0px 100px 10px 0px;
   background-color: rgb(46, 53, 75);
+  display:flex;
+  align-items: center;
 }
 .about img{
-  height: auto; 
+  height: 500px; 
   width: 750px;
+  margin-right: 80px;
 }
 .about-text{
-  width: 550px;
+  width: 650px;
 }
 .main{
   width: 1130px;
@@ -274,17 +277,18 @@ h5{
 .contact-me{
   width: 100% 
   height: 29px; 
-  background: var(--dark);
+  background: var(--light-blue);
   display:flex; 
   align-items: center; 
   flex-direction: column;
   justify-content: center;
+  padding: 50px 30px;
 }
 .contact-me p{
-  color: var(--grey);
+  color: rgb(46, 53, 75));
   font-size: 30px; 
   font-weight: bold; 
-  margin-top: 25px;
+  margin-top: 20px 20px 20px 30px;
 }
 .contact-me .button-two{ 
   background-color: var(--crimson);
@@ -312,7 +316,7 @@ h5{
 footer{
   position: relative;
   width: 100%;
-  height: 200px; 
+  height: 300px; 
   background: var(--background);
   display: flex;
   flex-direction:column;
@@ -330,7 +334,45 @@ footer p:nth-child(2){
   font-size: 17px;
   width: 500px;
   text-align:center; 
-
+  line-height: 26px;
+}
+.social{
+  display: flex; 
+}
+.social a{
+  width: 45px;
+  height: 45px;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  background: var(--crimson);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  margin: 22px 10px;
+  color: var(--grey);
+  text-decoration: none;
+  font-size: 20px;
+}
+.social a:hover{
+  transform:scale(1.3);
+  -webkit-transform:scale(1.3);
+  -moz-transform:scale(1.3);
+  -ms-transform:scale(1.3);
+  -o-transform:scale(1.3);
+  transition:.3s;
+  -webkit-transition:.3s;
+  -moz-transition:.3s;
+  -ms-transition:.3s;
+  -o-transition:.3s;
+}
+.end{ 
+  position:absolute;
+  color: var(--crimson);
+  bottom: 35px;
+  font-size: 14px;
 }
 
 
